# AttachablePlugin

./: README.md  README_jp.md
attachable_joint_plugin/: CMakeLists.txt  package.xml
attachable_joint_plugin/include/: attachable_joint_plugin.hh
attachable_joint_plugin/src/: attachable_joint_plugin.cc
attachable_plugin_demos/: package.xml  setup.cfg  setup.py
attachable_plugin_demos/attachable_plugin_demos/: arm_joint_teleop.py  attach_contact_link.py
attachable_plugin_demos/config/: mobile_robot_demo.yaml  simple_6d_arm_bridge.yaml
attachable_plugin_demos/launch/: arm_robot_demo.launch.py  attachable_joint_demo.launch.py  mobile_robot_demo.launch.py
attachable_plugin_demos/urdf/: shelf.urdf.xacro  simple_6d_arm.urdf.xacro  simple_mobile_robot.urdf.xacro
attachable_plugin_demos/world/: arm_robot_demo.world  attachable_joint_demo.world  mobile_robot_demo.world
sdf/: shelf.sdf
